<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SecureLock</string>
    <string name="action_settings">Settings</string>
    <string name="accept_string">Allow</string>
    <string name="decline_string">Decline</string>
    <string name="title_activity_button">Login Response</string>
    <string name="choose_button">Someone is attempting to login to you account? Do you wish to grant them access?</string>
    <string name="welcome_message">Welcome to SecureLock!</string>
    <string name="username_hint">Create Username</string>
    <string name="password_hint">Create Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="submit_button_string">Submit</string>
    <string name="title_activity_success">SecureLock</string>
    <string name="title_activity_launch">Register</string>
    <string name="reg_message">Register your Device</string>
    <string name="register_button_string">Device Registration</string>
    <string name="location_button_string">Edit Safe Locations</string>
    <string name="title_activity_location">Add Current Location</string>
    <string name="location_intro">Enter the details to add current location to list of safe locations for login without your Smartphone.</string>
    <string name="location_name_explanation">Please try and come up with a name no one else will be able to guess. Titles such as \'Home\' are not advised.</string>
    <string name="location_name_hint">Create Location Name</string>
    <string name="radius_explanation">Define the length of the radius, in metres, to encompass the area which this location represents.</string>
    <string name="radius_hint">Radius</string>
    <string name="rtis">Receive Transitions Intent Service</string>
    <string name="title_activity_geo_setter">Add Location Confirmation</string>
    <string name="awaiting_geo_conf">Adding Location Data</string>
    <string name="success_add_geofence">Location successfully added</string>
    <string name="fail_add_geofence">Error adding location, please try again</string>
    <string name="explanation">SecureLock is a new application for extra secure online logins. No more messing around with card readers, SecureLock allows you to confirm your identity with just the click of a button. It\'s simple: register your device once, create a username and password, and then login online. Every time you attempt a login, the SecureLock app will send you a prompt, asking you to allow or decline the login attempt. All you have to do is click a button to allow yourself in or stop a fraudster. It couldn\'t be easier.</string>
    <string name="location_explanation">And what if you don\'t have your phone on you when you really need access? SecureLock allows you to login without your device with the use of its unique Safe Locations feature. Just specify certain areas, such as your work place or home, that you consider safe and give them a name. When you try to login without your device, just tell SecureLock where your phone is by giving the location name and if your phone is where you say it is, the login will proceed as normal.</string>
    <string name="hello_world">Hello World</string>
    <string name="first_time_message">First time users, please register your device.</string>
    <string name="user_hint">Username</string>
    <string name="pass_hint">Password</string>
    <string name="location_heading">Add a Safe Location</string>
    <string name="login_attempt">Login Attempt</string>
    <string name="login_accepted">Login Accepted</string>
    <string name="login_declined">Login Declined</string>
    <string name="dereg_message">Remove Device Registration</string>
    <string name="remove_message">Fill in this form if you wish to disassociate this device with your account</string>
    <string name="remove_location_heading">Remove a Safe Location</string>
    <string name="remove_location_intro">Enter the details to remove a named location from the list of safe locations.</string>
    <string name="loc_hint">Location Name</string>
    <string name="success_remove_geofence">Location successfully removed</string>
    <string name="fail_remove_geofence">Error removing location, please try again</string>
    <string name="login_timeout">The login attempt timed out</string>
    <string name="login_timeout_fail">Timeout Fail</string>
    <string name="login_accepted_subheading">You have successfully allowed the login! Please return to your browser.</string>
    <string name="login_declined_subheading">You have successfully declined the login. Please contact your bank for more information on keeping your account secure.</string>
    <string name="login_timeout_subheading">You took too long to respond to the login attempt, access has been declined. If you still need to log in, simply try again.</string>
    <string name="success_dereg">Device successfully unregistered</string>
    <string name="rereg_hint_text">If you wish to reassociate this device with your account details, or to configure it for a different user, please return to the registration page and enter the necessary information.</string>
    <string name="success_reg">Device Successfully Registered</string>
    <string name="return_to_add_locs">Return to the Main Page to add Safe Locations, or proceed straight to log in.</string>
    <string name="success_fail">Sorry, something went wrong!</string>
    <string name="return_fail_sub">Don\'t worry, no one can access your account. The most likely cause is that you are not connected to the internet, please check your connection, wait 1 minute, and try again.</string>
    <string name="ok">Ok</string>

</resources>
