<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LaunchActivity" >

    <TextView
        style="@style/HeadingFont"
        android:id="@+id/reg_mess"
        android:text="@string/reg_message" />
    
    <TextView
        style="@style/SubHeadingFont"
        android:id="@+id/first_time_mess"
        android:layout_below="@id/reg_mess"
        android:text="@string/first_time_message" />

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/first_time_mess"
        android:inputType="text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:layout_below="@+id/username"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_hint"
        android:layout_below="@+id/password"
        android:inputType="textPassword" />

     <Button
         android:id="@+id/submit_button"
         style="@style/ButtonStyle"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_marginTop="50dp"
         android:layout_below="@id/confirm_password"
         android:onClick="submitClick"
         android:text="@string/submit_button_string"
         android:visibility="visible" 
         android:layout_width="170dp"/>
     
     
       <TextView
        style="@style/HeadingFont"
        android:id="@+id/dereg_mess"
        android:layout_below="@id/submit_button"
        android:layout_marginTop="20dp"
        android:text="@string/dereg_message" />
    
    <TextView
        style="@style/SubHeadingFont"
        android:id="@+id/remove_mess"
        android:layout_below="@id/dereg_mess"
        android:text="@string/remove_message" />

    <EditText
        android:id="@+id/deregusername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_hint"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/remove_mess"
        android:inputType="text" />

    <EditText
        android:id="@+id/deregpassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass_hint"
        android:layout_below="@+id/deregusername"
        android:inputType="textPassword" />
    
    <Button
         android:id="@+id/dereg_submit_button"
         style="@style/ButtonStyle"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_marginTop="50dp"
         android:layout_below="@id/deregpassword"
         android:onClick="deregSubmitClick"
         android:text="@string/submit_button_string"
         android:visibility="visible" 
         android:layout_width="170dp"/>

</RelativeLayout>
