<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LocationActivity" >

    <TextView
        android:id="@+id/location_intro_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/location_intro" />
    
    <EditText
        android:id="@+id/location_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_intro_field"
        android:hint="@string/username_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/location_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:layout_below="@+id/location_username"
        android:inputType="textPassword" />
    
    <TextView
        android:id="@+id/location_name_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_password"
        android:text="@string/location_name_explanation" />
    
    <EditText
        android:id="@+id/location_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location_name_hint"
        android:layout_below="@+id/location_name_warning"
        android:inputType="text" />
    
    <TextView
        android:id="@+id/location_radius_explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_name"
        android:text="@string/radius_explanation" />
    
    <EditText
        android:id="@+id/location_radius"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/radius_hint"
        android:layout_below="@+id/location_radius_explanation"
        android:inputType="number" />
    
     <Button
        android:id="@+id/location_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_vertical"
        android:text="@string/submit_button_string"
        android:onClick="submitLocationClick"
        android:visibility="visible" />

</RelativeLayout>
