<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ButtonActivity" >
    
    <TextView
        style="@style/HeadingFont"
        android:id="@+id/button_heading"
        android:text="@string/login_attempt" />

    <TextView
        style="@style/SubHeadingFont"
        android:id="@+id/button_sub_heading"
        android:layout_below="@id/button_heading"
        android:text="@string/choose_button" />

    <Button
        android:id="@+id/no_button"
        style="@style/ButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center_vertical"
        android:text="@string/decline_string"
        android:visibility="visible" />

    <Button
        android:id="@+id/yes_button"
        style="@style/ButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center_vertical"
        android:text="@string/accept_string"
        android:visibility="visible" />

</RelativeLayout>