<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
 	android:background="#FFFFFF">

    <LinearLayout  
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/welc_mess"
            style="@style/HeadingFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome_message"
            android:textSize="24sp" />   
      
      <ImageView
        android:id="@+id/first_image"
        android:scaleType="fitXY"
		android:layout_width="100dp" 
		android:layout_height="100dp"
		android:layout_marginLeft="50dp"
		android:layout_marginTop="20dp"	
        android:layout_gravity="left"
        android:contentDescription="@drawable/first_time_user_dark"
        android:src="@drawable/first_time_user_dark" />
        
	<Button
    	android:id="@+id/register_button"
    	style="@style/ButtonStyle"
    	android:layout_gravity="center_horizontal"
    	android:layout_marginTop="-35sp"
    	android:onClick="registerClick"
    	android:text="@string/register_button_string" />
	
	<ImageView
        android:id="@+id/where_image"
        android:scaleType="fitXY"
		android:layout_width="100dp" 
		android:layout_height="100dp"
		android:layout_marginRight="50dp"
		android:layout_marginTop="10dp"
        android:contentDescription="@drawable/where_are_you_dark"	
        android:layout_gravity="right"
        android:src="@drawable/where_are_you_dark" />
	
	<Button
    	android:id="@+id/location_button"
    	style="@style/ButtonStyle"
    	android:layout_gravity="center_horizontal"
    	android:layout_marginTop="-30sp"
    	android:onClick="locationClick"
    	android:text="@string/location_button_string" />
	<TextView
        android:id="@+id/explanation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textColor="#00008B"
        android:text="@string/explanation" />
      
      <TextView
        android:id="@+id/location_explanation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:textColor="#00008B"
        android:text="@string/location_explanation" />
	
    </LinearLayout>

</ScrollView>
